--- a/styles/style.css
+++ b/styles/style.css
@@ -1,28 +1,160 @@
+* {
+
+    Margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+
+}
+
+header {
+
+background-color: white;
+padding: 20px;
+
+}
+
+header > h1 {
+
+    color: #313ec5;
+    text-align: center;
+    font-family: 'EB Garamond', serif;
+    font-style: italic;
+}
+
 body {
-    background: rgb(255,0,0);
-    background: -moz-linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(14,132,240,1) 50%, rgba(69,252,130,1) 100%);
-    background: -webkit-linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(14,132,240,1) 50%, rgba(69,252,130,1) 100%);
-    background: linear-gradient(90deg, rgba(255,0,0,1) 0%, rgba(14,132,240,1) 50%, rgba(69,252,130,1) 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#ff0000",endColorstr="#45fc82",GradientType=1);
+
+  background-color: #252631;
+
 }
+
+.button3 {
+  background-color: white; 
+  color: black; 
+  border: 2px solid #f44336;
+  margin: 10px 10px;
+}
+
+.button3:hover {
+  background-color: #f44336;
+  color: white;
+  margin: 10px 10px;
+}
+
+.button {
+  background-color: crimson;
+  border: none;
+  color: white;
+  padding: 16px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 12px 6px;
+  transition-duration: 0.4s;
+  cursor: pointer;
+}
+
 h1 {
-    color:red;
-    font-style:italic;
-    text-align: center;
-    font-family: 'EB Garamond', serif;
+
+  text-align: center;
+  color:crimson;
+
 }
-h2 {
-    color:#03bafc;
-    text-align:center;
-    font-family: 'EB Garamond', serif;
+
+.navigate {
+  border: 5px outset red;
+  background-color: lightblue;    
+  text-align: center;
+  width: 750px;
+  height: 300px;
+  padding: 30px;
+  margin: 15px auto;
+  }
+
+  .collection {
+
+  border: 6px outset lawngreen;
+  background-color:lightgreen;
+  text-align: center;
+  width:  1000px;
+  height: 400px;
+  padding:30px;
+  margin: 15px auto;
+
+  }
+
+  h2 {
+
+text-align: centet;
+color:rgb(0, 129, 0);
+
+  }
+
+  h3 {
+
+text-align: center;
+    color:maroon
+  }
+
+  .media {
+
+border: 6px outset brown;
+background-color:#FF8080;
+width: 1000px;
+height: 400;
+padding: 30px;
+margin: 15px auto;
+
+
+  }
+
+  /* Center the loader */
+#loader {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  z-index: 1;
+  width: 120px;
+  height: 120px;
+  margin: -76px 0 0 -76px;
+  border: 16px solid #006eff;
+  border-radius: 50%;
+  border-top: 16px solid #9b0202;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
 }
-p {
-    font-family: 'EB Garamond', serif;
-    text-align: center;
-    color:#03fc52;
+
+@-webkit-keyframes spin {
+  0% { -webkit-transform: rotate(0deg); }
+  100% { -webkit-transform: rotate(360deg); }
 }
-li {
-    text-align: center;
-    color:#03fc52;
-    font-family: 'EB Garamond', serif;
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+/* Add animation to "page content" */
+.animate-bottom {
+  position: relative;
+  -webkit-animation-name: animatebottom;
+  -webkit-animation-duration: 1s;
+  animation-name: animatebottom;
+  animation-duration: 1s
+}
+
+@-webkit-keyframes animatebottom {
+  from { bottom:-100px; opacity:0 } 
+  to { bottom:0px; opacity:1 }
+}
+
+@keyframes animatebottom { 
+  from{ bottom:-100px; opacity:0 } 
+  to{ bottom:0; opacity:1 }
+}
+
+#myDiv {
+  display: none;
+  text-align: center;
 }
